# dramatic

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp
include/dramatic/: dramatic.hpp
